Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/__cscript_add_to_qm.cs
 /
function! $_exeFile ;;_exeFile: qm or qmmacro

int h=BeginUpdateResource(_s.expandpath(_exeFile) 0)
if(!UpdateResource(h +